--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" 
         integrity="sha512-UJfAaOlIRtdR+0P6C3KUoTDAxVTuy3lnSXLyLKlHYJlcSU8Juge/mjeaxDNMlw9LgeIotgz5FP8eUQPhX1q10A==" 
         crossorigin="anonymous" />
+
+        <style>
+            .row {
+                margin-top: 25vh;
+            }
+
+            h1 {
+                margin-top: 0;
+            }
+        </style>
     </head>
     <body>
         <div class="row">
             <div class="col s8 offset-s2">
-                <div class="card-panel">
+                <div id="messege-show" class="card-panel hide">
+                    <h1></h1>
+                    <div>
+                        <a href="./index.html">Create your owen secret message</a>
+                    </div>
+                </div>
+                <div class="card-panel" id="messege-form">
                     <form>
                         <label>Enter a Secre Message</label>
                         <input id="message-input" />
@@ -18,9 +34,11 @@
                     </form>
                 </div>
 
-                <div>
-                    Share this link with a friend
-                    <input id="link-input" />
+                <div class="card-panel hide" id="link-form">
+                    <div>
+                        Share this link with a friend
+                        <input id="link-input" />
+                    </div>
                 </div>
             </div>
         </div>
